--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,11 +67,14 @@ bind -n C-S-right swap-window -t +1
 
 # hsplit
 unbind %
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
 # vsplit
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
+
+# new window
+bind c new-window -c "#{pane_current_path}"
 
 # Panes
 unbind space
