--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 [github]
 	user = bcobb
 [core]
-	excludesfile = /Users/bcobb/.gitignore_global
+	excludesfile = ~/.gitignore_global
 	editor = /usr/local/bin/vim
 [apply]
   whitespace = fix
