--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 	user = bcobb
 [core]
 	excludesfile = ~/.gitignore_global
-	editor = /usr/local/bin/vim
+	editor = vim
 [apply]
   whitespace = fix
 
