Add ignore/unignore aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -31,3 +31,6 @@
   untracked = cyan
 [credential]
 	helper = osxkeychain
+[alias]
+	ignore = update-index --assume-unchanged --
+	unignore = update-index --no-assume-unchanged --
