Keep 5000 lines of tmux history

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,10 @@ set -g prefix C-u
 unbind C-b
 bind C-u send-prefix
 
+# Moar history
+
+set-option -g history-limit 5000
+
 # Nice colors
 set -g default-terminal "screen-256color"
 
