Highlight common whitespace errors in git diff

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = vim
+	whitespace = blank-at-eol,space-before-tab,blank-at-eof
 [apply]
   whitespace = fix
 
