--- a/.gitconfig
+++ b/.gitconfig
@@ -35,3 +35,5 @@
 [alias]
 	ignore = update-index --assume-unchanged --
 	unignore = update-index --no-assume-unchanged --
+[push]
+	default = nothing
