Use C-t as the tmux prefix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 # C-u is the tmux prefix
-set -g prefix C-u
+set -g prefix C-t
 unbind C-b
-bind C-u send-prefix
+bind C-t send-prefix
 
 # Moar history
 
