--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,8 @@ bind C-t send-prefix
 set-option -g history-limit 5000
 
 # Nice colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+set-option -g xterm-keys on
 
 # Reload the config
 unbind r
