Fix tmux scrolling
h/t:
https://ryanfb.github.io/etc/2015/10/19/tmux_mouse_mode_on_el_capitan.html

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,10 +54,10 @@ set -g clock-mode-style 12
 set -g clock-mode-colour colour155 # yellow
 
 # Mouse
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+# cargo cult: https://github.com/tmux/tmux/issues/144
+set -g mouse on
+bind-key -t vi-copy WheelUpPane scroll-up
+bind-key -t vi-copy WheelDownPane scroll-down
 
 # VI Bindings
 set -g mode-keys vi
