--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ set-option -g history-limit 5000
 set -g default-terminal "xterm-256color"
 set-option -g xterm-keys on
 
+# Copy pasta
+# set-option -g default-command "reattach-to-user-namespace -l bash"
+
 # Reload the config
 unbind r
 bind-key r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
@@ -25,9 +28,9 @@ set -g status-right '#[fg=default]%H:%M %Z'
 set -g status-right-length 100
 
 # Status bar styling
-set -g status-bg colour235 # very dark grey
-set -g status-fg colour7 # light grey
-set -g window-status-current-fg colour155 # yellow
+# set -g status-bg colour235 # very dark grey
+# set -g status-fg colour7 # light grey
+# set -g window-status-current-fg colour155 # yellow
 set -g status-position bottom
 
 set -g window-status-format "#[fg=colour7,bg=colour234] #I #W "
@@ -38,16 +41,16 @@ set -g pane-base-index 1
 
 # Show activity in other windows
 set -g monitor-activity on
-set -g window-status-activity-attr bold
+# set -g window-status-activity-attr bold
 
 # Messages
 set -g display-time 3000
-set -g message-bg colour155 # yellow
-set -g message-fg black
+# set -g message-bg colour155 # yellow
+# set -g message-fg black
 
 # Panes
-set -g pane-border-fg colour8 # dark grey
-set -g pane-active-border-fg colour7 # light grey
+# set -g pane-border-fg colour8 # dark grey
+# set -g pane-active-border-fg colour7 # light grey
 
 # Clock
 set -g clock-mode-style 12
@@ -56,17 +59,15 @@ set -g clock-mode-colour colour155 # yellow
 # Mouse
 # cargo cult: https://github.com/tmux/tmux/issues/144
 set -g mouse on
-bind-key -t vi-copy WheelUpPane scroll-up
-bind-key -t vi-copy WheelDownPane scroll-down
+# bind-key -t vi-copy WheelUpPane scroll-up
+# bind-key -t vi-copy WheelDownPane scroll-down
 
 # VI Bindings
 set -g mode-keys vi
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+# bind-key -t vi-copy 'v' begin-selection
+# bind-key -t vi-copy 'y' copy-selection
 
 # Tab Navigation
-bind -n S-left prev
-bind -n S-right next
 bind -n C-S-left swap-window -t -1
 bind -n C-S-right swap-window -t +1
 
